@@ -1,7 +1,7 @@
 application: feedback-ltworf
-version: 2
+version: 1
 runtime: python27
-api_version: 1
+api_version: 3
 threadsafe: true
 
 handlers:
