@@ -2,6 +2,8 @@
 - Better tokenizer, gives more indicative errors
 - Parser gives more indicative errors
 - Improved select_union_intersect_subtract optimization to avoid parenthesis whenever possible
+- Moved feedback service, and added the code for it
+- Different way of checking the latest version
 
 1.1
 - Incorrect relational operations now raise an exception instead of returning None
